fix: Fix row gaps on desktop

--- a/client/Pages/PageProduct/elements/FeatureItem/FeatureItem.module.css
+++ b/client/Pages/PageProduct/elements/FeatureItem/FeatureItem.module.css
@@ -17,6 +17,13 @@
   overflow: hidden;
 }
 
+.imgWrapper:before {
+  display: block;
+  padding: 0 0 66.6666666666667%;
+
+  content: '';
+}
+
 .image {
   position: absolute;
   top: 0;
