--- a/client/Pages/PageProduct/elements/ProductFeatures/ProductFeatures.module.css
+++ b/client/Pages/PageProduct/elements/ProductFeatures/ProductFeatures.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   display: grid;
-  grid-template-rows: repeat(1fr);
+  grid-row-gap: var(--space-xxb);
+  grid-template-rows: 1fr;
   max-width: 1268px;
   margin-top: 100px;
   margin-bottom: 100px;
